some tests pass